Fixed libk build on openwrt

--- a/libk/Makefile
+++ b/libk/Makefile
@@ -4,16 +4,17 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=libk
-PKG_VERSION:=master
+PKG_VERSION:=devel
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/mkschreder/libk.git
+PKG_SOURCE_URL:=https://github.com/mkschreder/martink.git
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_VERSION:=$(PKG_VERSION)
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_INSTALL:=1
+MAKE += BUILD=linux-generic
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -31,31 +32,31 @@ define Package/libk/description
 endef
 
 define Build/Configure
-	( cd $(PKG_BUILD_DIR); ./autogen.sh )
+	( cd $(PKG_BUILD_DIR); [ ! -f include/autoconf.h ] && $(MAKE) oldconfig)
 	$(call Build/Configure/Default)
 endef
 
 define Build/InstallDev
-	$(INSTALL_DIR) $(1)/usr/include/
-	$(CP) \
-		$(PKG_INSTALL_DIR)/usr/include/* \
-		$(1)/usr/include/
+	#$(INSTALL_DIR) $(1)/usr/include/
+	#$(CP) \
+	#	$(PKG_INSTALL_DIR)/usr/include/* \
+	#	$(1)/usr/include/
 
 	$(INSTALL_DIR) $(1)/usr/lib
 	$(CP) \
-		$(PKG_INSTALL_DIR)/usr/lib/libk.so* \
+		$(PKG_INSTALL_DIR)/usr/lib/libk*.a \
 		$(1)/usr/lib/
 
-	$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
-	$(CP) \
-		$(PKG_INSTALL_DIR)/usr/lib/pkgconfig/libk.pc \
-		$(1)/usr/lib/pkgconfig/
+	#$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
+	#$(CP) \
+	#	$(PKG_INSTALL_DIR)/usr/lib/pkgconfig/libk.pc \
+	#	$(1)/usr/lib/pkgconfig/
 endef
 
 define Package/libk/install
 	$(INSTALL_DIR) $(1)/usr/lib/
 	$(CP) \
-		$(PKG_INSTALL_DIR)/usr/lib/libk.so* \
+		$(PKG_INSTALL_DIR)/usr/lib/libk*.a \
 		$(1)/usr/lib/
 endef
 
